# gtfsort

./: .gitignore  CITATION.cff  Cargo.toml  Dockerfile  LICENSE  README.md  benchmark.sh  build.rs  cbindgen.toml  cbindgen_cxx.toml
.github/workflows/: benchmark.yml  check.yml
ci/: benchmark.rs  integration_test.rs
ci/c_ffi/: CMakeLists.txt  test_ffi.cxx
gtfsort/: .gitignore  Cargo.toml  cbindgen.toml
gtfsort/ci/c_ffi/: CMakeLists.txt  test_ffi.supp
gtfsort/include/: gtfsort.hxx
gtfsort/src/: gtf.rs  interop.rs  lib.rs  main.rs  mmap.rs  ord.rs  test_utils.rs  utils.rs
gtfsort/src/gtf/: attr.rs
include/: gtfsort.h  gtfsort.hxx
py-gtfsort/: Cargo.toml  pyproject.toml
py-gtfsort/src/: lib.rs
py-gtfsort/test/: gtfsort.py  test_gtfsort.py
r/gtfsort/: .Rbuildignore  DESCRIPTION  NAMESPACE
r/gtfsort/R/: extendr-wrappers.R
r/gtfsort/man/: sort_annotations.Rd  sort_annotations_str.Rd
r/gtfsort/src/: Makevars  Makevars.win  entrypoint.c  gtfsort-win.def
r/gtfsort/src/rust/: Cargo.toml  gtfsort
r/gtfsort/src/rust/src/: lib.rs
r/gtfsort/tests/: testthat.R
r/gtfsort/tests/testthat/: test-test_sort_annotations.R
src/: gtf.rs  interop.rs  lib.rs  main.rs  mmap.rs  ord.rs  utils.rs
src/gtf/: attr.rs
