[package]
name = "gtfsort"
version = "0.2.2"
authors = ["alejandrogzi <jose.gonzalesdezavala1@unmsm.edu.pe>"]
edition = "2021"
license = "MIT"
description = "An optimized chr/pos/feature GTF2.5-3 sorter using a lexicographic-based index ordering algorithm written in Rust."
homepage = "https://github.com/alejandrogzi/gtfsort"
repository = "https://github.com/alejandrogzi/gtfsort"
readme = "README.md"
keywords = ["sort", "gtf", "cli", "gtfsort"]
categories = ["command-line-utilities", "science"]

[dependencies]
clap = {version = "4.0", features = ["derive"]}
colored = {version = "1.9.4"}
natord = "1.0.9"
indoc = "2.0.4"
log = "0.4.14"
simple_logger = "4.0.0"
thiserror = "1.0"
rayon = "1.8.0"
num_cpus = "1.16.0"
libc = "0.2.151"
hashbrown = {version="0.14", features=["rayon"]}
dashmap = "5.5"
time = "0.3.36"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = ["Win32", "Win32_System", "Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_System_Memory", "Win32_Security"] }

[features]
default = ["mmap"]
mmap = []

[profile.release]
lto = true

[lib]
name = "gtfsort"
path = "src/lib.rs"

[[bin]]
name = "gtfsort"
path = "src/main.rs"
