[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "py-gtfsort"
description = "Python port to an optimized chr/pos/feature GTF/GFF sorter using a lexicographic-based index ordering algorithm written in Rust"
authors = ["alejandrogzi <alejandrxgzi@gmail.com>", "eternal-flame-AD <yume@yumechi.jp>"]
maintainers = ["alejandrogzi <alejandrxgzi@gmail.com>", "eternal-flame-AD <yume@yumechi.jp>"]
requires-python = ">=3.8"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
homepage = "https://github.com/alejandrogz/gtfsort"

[tool.maturin]
features = ["pyo3/extension-module"]

